{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 523,
  "lineage": "79adc580-060c-26b1-aac7-fb225c9e7500",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/moshi-3/zones/us-central1-c/instanceGroups/moshi-srv-igm",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-08-23T08:02:30.412-07:00",
            "description": "This backend service is used to route traffic to Moshi media server instances.",
            "enable_cdn": false,
            "fingerprint": "zakjaEqZ9Xc=",
            "generated_id": 7910299193544778089,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/moshi-3/global/healthChecks/moshi-srv-hc"
            ],
            "id": "projects/moshi-3/global/backendServices/moshi-srv-bs",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "moshi-srv-bs",
            "port_name": "http",
            "project": "moshi-3",
            "protocol": "HTTP",
            "security_policy": "https://www.googleapis.com/compute/beta/projects/moshi-3/global/securityPolicies/moshi-srv-sp",
            "self_link": "https://www.googleapis.com/compute/v1/projects/moshi-3/global/backendServices/moshi-srv-bs",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.autohealing",
            "google_compute_instance_group_manager.default",
            "google_compute_instance_template.default",
            "google_compute_network.default",
            "google_compute_security_policy.default",
            "google_compute_subnetwork.default",
            "google_service_account.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-health-checks",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-08-23T08:01:32.489-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/moshi-3/global/firewalls/moshi-srv-allow-health-checks",
            "log_config": [],
            "name": "moshi-srv-allow-health-checks",
            "network": "https://www.googleapis.com/compute/v1/projects/moshi-3/global/networks/moshi-srv-network",
            "priority": 1000,
            "project": "moshi-3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/moshi-3/global/firewalls/moshi-srv-allow-health-checks",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-webrtc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3478",
                  "5349",
                  "30000-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "3478",
                  "5349",
                  "30000-65535"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2023-08-23T08:01:32.487-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/moshi-3/global/firewalls/moshi-srv-allow-webrtc",
            "log_config": [],
            "name": "moshi-srv-allow-webrtc",
            "network": "https://www.googleapis.com/compute/v1/projects/moshi-3/global/networks/moshi-srv-network",
            "priority": 1000,
            "project": "moshi-3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/moshi-3/global/firewalls/moshi-srv-allow-webrtc",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-webrtc"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_psc_global_access": false,
            "description": "This forwarding rule is used to route HTTPS traffic to Moshi media server instances.",
            "id": "projects/moshi-3/global/forwardingRules/moshi-srv-fwd",
            "ip_address": "34.110.228.236",
            "ip_protocol": "TCP",
            "label_fingerprint": "a6HI36FuYIQ=",
            "labels": {
              "environment": "dev"
            },
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "moshi-srv-fwd",
            "port_range": "443-443",
            "project": "moshi-3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/moshi-3/global/forwardingRules/moshi-srv-fwd",
            "target": "https://www.googleapis.com/compute/beta/projects/moshi-3/global/targetHttpsProxies/moshi-srv-thp"
          },
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_health_check.autohealing",
            "google_compute_instance_group_manager.default",
            "google_compute_instance_template.default",
            "google_compute_network.default",
            "google_compute_security_policy.default",
            "google_compute_subnetwork.default",
            "google_compute_target_https_proxy.default",
            "google_compute_url_map.default",
            "google_service_account.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/moshi-3/global/networks/moshi-srv-network",
            "mtu": 0,
            "name": "moshi-srv-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "moshi-3",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/moshi-3/global/networks/moshi-srv-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_security_policy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "adaptive_protection_config": [],
            "advanced_options_config": [],
            "description": "This security policy is used to protect the Moshi media server load balancer.",
            "fingerprint": "IjQlI3MAjz0=",
            "id": "projects/moshi-3/global/securityPolicies/moshi-srv-sp",
            "name": "moshi-srv-sp",
            "project": "moshi-3",
            "recaptcha_options_config": [],
            "rule": [
              {
                "action": "allow",
                "description": "default rule",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 2147483647,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "rate_based_ban",
                "description": "rate limit",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 1000,
                "rate_limit_options": [
                  {
                    "ban_duration_sec": 60,
                    "ban_threshold": [],
                    "conform_action": "allow",
                    "enforce_on_key": "ALL",
                    "enforce_on_key_configs": [],
                    "enforce_on_key_name": "",
                    "exceed_action": "deny(429)",
                    "exceed_redirect_options": [],
                    "rate_limit_threshold": [
                      {
                        "count": 60,
                        "interval_sec": 60
                      }
                    ]
                  }
                ],
                "redirect_options": []
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/moshi-3/global/securityPolicies/moshi-srv-sp",
            "timeouts": null,
            "type": "CLOUD_ARMOR"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-08-23T08:01:32.826-07:00",
            "gateway_address": "10.1.2.1",
            "id": "projects/moshi-3/regions/us-central1/subnetworks/moshi-srv-subnetwork",
            "ip_cidr_range": "10.1.2.0/24",
            "name": "moshi-srv-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/moshi-3/global/networks/moshi-srv-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "moshi-3",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/moshi-3/regions/us-central1/subnetworks/moshi-srv-subnetwork",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-08-23T08:03:16.081-07:00",
            "description": "This is used to route traffic to Moshi media server instances.",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/moshi-3/global/targetHttpsProxies/moshi-srv-thp",
            "name": "moshi-srv-thp",
            "project": "moshi-3",
            "proxy_bind": false,
            "proxy_id": 6419232121995108699,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/moshi-3/global/targetHttpsProxies/moshi-srv-thp",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/moshi-3/global/sslCertificates/moshi-ssl-cert"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/moshi-3/global/urlMaps/moshi-srv-um"
          },
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_health_check.autohealing",
            "google_compute_instance_group_manager.default",
            "google_compute_instance_template.default",
            "google_compute_network.default",
            "google_compute_security_policy.default",
            "google_compute_subnetwork.default",
            "google_compute_url_map.default",
            "google_service_account.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-08-23T08:03:04.882-07:00",
            "default_route_action": [],
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "chatmoshi.com",
                "https_redirect": true,
                "path_redirect": "",
                "prefix_redirect": "",
                "redirect_response_code": "FOUND",
                "strip_query": true
              }
            ],
            "description": "This URL map is used to route call traffic to Moshi media server instances.",
            "fingerprint": "E7_Y3XDbal8=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "chatmoshi.com",
                  "www.chatmoshi.com"
                ],
                "path_matcher": "public-website"
              },
              {
                "description": "",
                "hosts": [
                  "dev.chatmoshi.com"
                ],
                "path_matcher": "dev-api"
              }
            ],
            "id": "projects/moshi-3/global/urlMaps/moshi-srv-um",
            "map_id": 2246571630430757191,
            "name": "moshi-srv-um",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "",
                "default_url_redirect": [
                  {
                    "host_redirect": "chatmoshi.com",
                    "https_redirect": true,
                    "path_redirect": "/",
                    "prefix_redirect": "",
                    "redirect_response_code": "",
                    "strip_query": true
                  }
                ],
                "description": "",
                "header_action": [],
                "name": "public-website",
                "path_rule": [
                  {
                    "paths": [
                      "*"
                    ],
                    "route_action": [
                      {
                        "cors_policy": [
                          {
                            "allow_credentials": false,
                            "allow_headers": [
                              "Content-Type"
                            ],
                            "allow_methods": [
                              "GET",
                              "OPTIONS"
                            ],
                            "allow_origin_regexes": null,
                            "allow_origins": [
                              "https://chatmoshi.com",
                              "https://www.chatmoshi.com"
                            ],
                            "disabled": false,
                            "expose_headers": null,
                            "max_age": 0
                          }
                        ],
                        "fault_injection_policy": [],
                        "request_mirror_policy": [],
                        "retry_policy": [],
                        "timeout": [],
                        "url_rewrite": [],
                        "weighted_backend_services": []
                      }
                    ],
                    "service": "https://www.googleapis.com/compute/v1/projects/moshi-3/global/backendBuckets/moshi-web-bb",
                    "url_redirect": []
                  }
                ],
                "route_rules": []
              },
              {
                "default_route_action": [],
                "default_service": "",
                "default_url_redirect": [
                  {
                    "host_redirect": "dev.chatmoshi.com",
                    "https_redirect": true,
                    "path_redirect": "/",
                    "prefix_redirect": "",
                    "redirect_response_code": "",
                    "strip_query": true
                  }
                ],
                "description": "",
                "header_action": [],
                "name": "dev-api",
                "path_rule": [
                  {
                    "paths": [
                      "/",
                      "/call/*",
                      "/healthz",
                      "/version"
                    ],
                    "route_action": [
                      {
                        "cors_policy": [
                          {
                            "allow_credentials": true,
                            "allow_headers": [
                              "Content-Type",
                              "Authorization"
                            ],
                            "allow_methods": [
                              "GET",
                              "POST",
                              "OPTIONS"
                            ],
                            "allow_origin_regexes": [],
                            "allow_origins": [
                              "https://dev.chatmoshi.com"
                            ],
                            "disabled": false,
                            "expose_headers": [],
                            "max_age": 0
                          }
                        ],
                        "fault_injection_policy": [],
                        "request_mirror_policy": [],
                        "retry_policy": [],
                        "timeout": [],
                        "url_rewrite": [],
                        "weighted_backend_services": []
                      }
                    ],
                    "service": "https://www.googleapis.com/compute/v1/projects/moshi-3/global/backendServices/moshi-srv-bs",
                    "url_redirect": []
                  }
                ],
                "route_rules": []
              }
            ],
            "project": "moshi-3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/moshi-3/global/urlMaps/moshi-srv-um",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.default"
          ]
        }
      ]
    }
  ]
}